--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+* {
+  font-family: "Open Sans", sans-serif;
+}
+
+.signUpSection {
+  background: #083aa5;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 800px;
+  height: 450px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  color: rgb(255, 255, 255);
+  border-radius: 20px;
+  box-shadow: 3px 10px 20px 5px rgba(44, 66, 92, 0.6);
+}
+.info {
+  width: 45%;
+  padding: 80px 0px 0 50px;
+}
+.nav {
+  background: #010b20;
+  height: 60px;
+  width: auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  display: flex;
 }
